--- a/views/partials/flash.jade
+++ b/views/partials/flash.jade
@@ -1,14 +1,15 @@
 br
 #flash
-  if messages.errors
-    .alert.alert-danger.animated.fadeIn
-      for error in messages.errors
-        div= error.msg
-  if messages.info
-    .alert.alert-info.animated.fadeIn
-      for info in messages.info
-        div= info.msg
-  if messages.success
-    .alert.alert-success.animated.fadeIn
-      for success in messages.success
-        div= success.msg
+  if messages
+    if messages.errors
+      .alert.alert-danger.animated.fadeIn
+        for error in messages.errors
+          div= error.msg
+    if messages.info
+      .alert.alert-info.animated.fadeIn
+        for info in messages.info
+          div= info.msg
+    if messages.success
+      .alert.alert-success.animated.fadeIn
+        for success in messages.success
+          div= success.msg
